ndb - bug#50736 - impl. handler::keys_to_use_for_scanning for more index usage in group/order by